Modfied SecurtityConfiguration